--- a/5-days-yoga-retreats.html
+++ b/5-days-yoga-retreats.html
@@ -84,7 +84,7 @@
 		</header>
 
 		<!-- Banner Section -->
-		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/yogahall3.jpg') center center no-repeat;">
+		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/page-banner.jpg') center center no-repeat;">
 			<div class="row py-5">
 				<div class="col-12 mt-lg-5 text-center">
 					<h1 class="display-4 text-white animated zoomIn">Retreats</h1>
@@ -149,7 +149,7 @@
                                     Join us at Himalayan Yoga Retreats for a deeper dive into yoga and meditation with our 5 Days Yoga Retreat. This retreat is designed for those who wish to explore a more immersive yoga experience in the tranquil surroundings of Rishikesh. Ideal for both beginners and experienced yogis, this program offers an extended opportunity to deepen your practice, relax, and rejuvenate.
                                 </p>
                                 <div class="text-center">
-                                    <img src="images/yoga-retreats.jpg" class="img-fluid rounded" alt="5 Days Yoga Retreat">
+                                    <img src="images/yoga-retreats(2).jpg" class="img-fluid rounded" alt="5 Days Yoga Retreat">
                                 </div>
                             </div>
                         </div>
@@ -284,7 +284,7 @@
                                 
                                         <!-- Right Side Image -->
                                         <div class="col-lg-5">
-                                            <img src="images/service-detail-02.jpg" alt="Retreat Fee Image" class="img-fluid rounded">
+                                            <img src="images/service-detail-01.jpg" alt="Retreat Fee Image" class="img-fluid rounded">
                                         </div>
                                     </div>
                                 </div>
@@ -323,7 +323,7 @@
                                     </div>
 
                                     <div class="col-lg-5 mb-3">
-                                        <img src="images/retreat-fee.jpg" alt="Eligibility Image" class="img-fluid">
+                                        <img src="images/retreat-fee(2).jpg" alt="Eligibility Image" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
