--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -84,7 +84,7 @@
 		</header>
 
 		<!-- Banner Section -->
-		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/yogahall3.jpg') center center no-repeat;">
+		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/page-banner.jpg') center center no-repeat;">
 			<div class="row py-5">
 				<div class="col-12 mt-lg-5 text-center">
 					<h1 class="display-4 text-white animated zoomIn">Retreats</h1>
@@ -285,7 +285,7 @@
                                 
                                         <!-- Right Side Image -->
                                         <div class="col-lg-5">
-                                            <img src="images/service-detail-02.jpg" alt="Retreat Fee Image" class="img-fluid rounded">
+                                            <img src="images/service-detail-03.jpg" alt="Retreat Fee Image" class="img-fluid rounded">
                                         </div>
                                     </div>
                                 </div>
@@ -323,7 +323,7 @@
                                     </div>
 
                                     <div class="col-lg-5 mb-3">
-                                        <img src="images/retreat-fee.jpg" alt="Eligibility Image" class="img-fluid">
+                                        <img src="images/retreat-fee(3).jpg" alt="Eligibility Image" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
