--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,7 @@
 		</header>
 
 		<!-- Banner Section -->
-		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/yogahall3.jpg') center center no-repeat;">
+		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/page-banner.jpg') center center no-repeat;">
 			<div class="row py-5">
 				<div class="col-12 mt-lg-5 text-center">
 					<h1 class="display-4 text-white animated zoomIn">Contact</h1>
