--- a/himalaya-location.html
+++ b/himalaya-location.html
@@ -76,7 +76,7 @@
     </header>
 
     <!-- Banner Section -->
-    <div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.5), rgba(9, 30, 62, 0.5)), url('images/himalaya-banner.jpg') center center no-repeat;">
+    <div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.5), rgba(9, 30, 62, 0.5)), url('images/page-banner.jpg') center center no-repeat;">
         <div class="row py-5">
             <div class="col-12 mt-lg-5 text-center">
                 <h1 class="display-4 text-white animated zoomIn">Himalaya</h1>
@@ -154,13 +154,12 @@
                                             <i class="fas fa-mountain text-theme me-2"></i> Trek to Everest Base Camp or Annapurna Circuit
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-temple text-theme me-2"></i> Visit sacred monasteries like Hemis and Thiksey
+                                            <i class="fas fa-praying-hands text-theme me-2"></i> Visit sacred monasteries like Hemis and Thiksey
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-water text-theme me-2"></i> Explore glacial rivers and high-altitude lakes
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                           ```html
                                         <i class="fas fa-hiking text-theme me-2"></i> Trek through lush valleys and glacial terrain
                                         </li>
                                     </ul>
@@ -187,7 +186,7 @@
                                             <i class="fas fa-hiking text-theme me-2"></i> Trek to Annapurna, Everest Base Camp, and other trails
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-parachute text-theme me-2"></i> Paragliding in the Solang Valley
+                                            <i class="fas fa-cloud text-theme me-2"></i> Paragliding in the Solang Valley
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
                                             <i class="fas fa-campground text-theme me-2"></i> Camp under the stars in the Himalayas
