--- a/chopta-location.html
+++ b/chopta-location.html
@@ -135,7 +135,7 @@
                             <hr class="custom-underline">
                             <p class="text-justify">Chopta, also known as the "Mini Switzerland of India," is a charming hill station nestled in the Garhwal Himalayas of Uttarakhand. Renowned for its panoramic views of majestic peaks, dense forests, and alpine meadows, Chopta is an ideal destination for nature lovers, trekkers, and those seeking tranquility.</p>
                             <div class="text-center">
-                                <img src="images/chopta-yoga-1.jpg" class="img-fluid rounded" alt="Chopta Overview">
+                                <img src="images/chopta-first.jpg" class="img-fluid rounded" alt="Chopta Overview">
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                                 </div>
                                 <!-- Right Side: Image -->
                                 <div class="col-lg-5">
-                                    <img src="images/chopta-yoga-2.jpg" alt="Key Highlights of Chopta" class="img-fluid rounded">
+                                    <img src="images/chopta-second.jpg" alt="Key Highlights of Chopta" class="img-fluid rounded">
                                 </div>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 </div>
                                 <!-- Right Side: Image -->
                                 <div class="col-lg-5">
-                                    <img src="images/chopta-yoga-3.jpg" alt="Popular Activities in Chopta" class="img-fluid rounded">
+                                    <img src="images/chopta-third.jpg" alt="Popular Activities in Chopta" class="img-fluid rounded">
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                     <ul class="list-unstyled text-start">
                         <li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
                         <li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
-                        <li><i class="fas fa-phone text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
+                        <li><i class="bi bi-telephone-fill text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
                     </ul>
                 </div>
             </div>
