--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -285,7 +285,7 @@
                                 
                                         <!-- Right Side Image -->
                                         <div class="col-lg-5">
-                                            <img src="images/service-detail-03.jpg" alt="Retreat Fee Image" class="img-fluid rounded">
+                                            <img src="images/retreat-fee(3).jpg" alt="Retreat Fee Image" class="img-fluid rounded">
                                         </div>
                                     </div>
                                 </div>
@@ -323,7 +323,7 @@
                                     </div>
 
                                     <div class="col-lg-5 mb-3">
-                                        <img src="images/retreat-fee(3).jpg" alt="Eligibility Image" class="img-fluid">
+                                        <img src="images/service-detail-03.jpg" alt="Eligibility Image" class="img-fluid">
                                     </div>
                                 </div>
                             </div>
@@ -551,7 +551,7 @@
 						<ul class="list-unstyled text-start">
 							<li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
 							<li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
-							<li><i class="fas fa-phone text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
+							<li><i class="bi bi-telephone-fill text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
 						</ul>
 					</div>
 				</div>
