--- a/contact.html
+++ b/contact.html
@@ -136,7 +136,7 @@
 							<ul class="list-unstyled">
 								<li class="d-flex align-items-center mb-3">
 									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
-										<i class="fas fa-phone-alt text-white"></i>
+										<i class="bi bi-telephone-fill text-white"></i>
 									</span>
 									<span>+123 456 7890</span>
 								</li>
@@ -144,13 +144,13 @@
 									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
 										<i class="fas fa-envelope text-white"></i>
 									</span>
-									<span>info@yourmail.com</span>
+									<span>vikashnawani999@gmail.com</span>
 								</li>
 								<li class="d-flex align-items-center">
 									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
 										<i class="fas fa-map-marker-alt text-white"></i>
 									</span>
-									<span>256 Mohra Rd, North London, UK</span>
+									<span>150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</span>
 								</li>
 							</ul>
 						</div>
@@ -203,7 +203,7 @@
 						<ul class="list-unstyled text-start">
 							<li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
 							<li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
-							<li><i class="fas fa-phone text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
+							<li><i class="bi bi-telephone-fill text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
 						</ul>
 					</div>
 				</div>
