--- a/himalaya-location.html
+++ b/himalaya-location.html
@@ -135,7 +135,7 @@
                             <hr class="custom-underline">
                             <p class="text-justify">The Himalayas, a magnificent mountain range stretching across northern India, is home to the world's highest peaks, including Mount Everest and Kanchenjunga. Known for its stunning landscapes, diverse flora and fauna, and rich cultural heritage, the Himalayas offer an unparalleled experience for adventurers, spiritual seekers, and nature lovers.</p>
                             <div class="text-center">
-                                <img src="images/himalaya-yoga-1.jpg" class="img-fluid rounded" alt="Himalaya Overview">
+                                <img src="images/himalaya-first.jpg" class="img-fluid rounded" alt="Himalaya Overview">
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                                 </div>
                                 <!-- Right Side: Image -->
                                 <div class="col-lg-5">
-                                    <img src="images/himalaya-yoga-2.jpg" alt="Key Highlights of Himalaya" class="img-fluid rounded">
+                                    <img src="images/himalaya-second.jpg" alt="Key Highlights of Himalaya" class="img-fluid rounded">
                                 </div>
                             </div>
                         </div>
@@ -198,7 +198,7 @@
                                 </div>
                                 <!-- Right Side: Image -->
                                 <div class="col-lg-5">
-                                    <img src="images/himalaya-yoga-3.jpg" alt="Popular Activities in Himalaya" class="img-fluid rounded">
+                                    <img src="images/himalaya-third.jpg" alt="Popular Activities in Himalaya" class="img-fluid rounded">
                                 </div>
                             </div>
                         </div>
@@ -337,7 +337,7 @@
                     <ul class="list-unstyled text-start">
                         <li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
                         <li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
-                        <li><i class="fas fa-phone text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
+                        <li><i class="bi bi-telephone-fill text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
                     </ul>
                 </div>
             </div>
