--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -76,7 +76,7 @@
     </header>
 
     <!-- Banner Section -->
-    <div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/rishikesh-banner.jpg') center center no-repeat;">
+    <div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/page-banner.jpg') center center no-repeat;">
         <div class="row py-5">
             <div class="col-12 mt-lg-5 text-center">
                 <h1 class="display-4 text-white animated zoomIn">Rishikesh</h1>
@@ -338,7 +338,7 @@
                     <ul class="list-unstyled text-start">
                         <li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
                         <li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
-                        <li><i class="fas fa-phone text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
+                        <li><i class="bi bi-telephone-fill text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
                     </ul>
                 </div>
             </div>
