--- a/registeration.html
+++ b/registeration.html
@@ -135,69 +135,84 @@
                     <!-- Right Form Section -->
                     <div class="col-lg-7 registration-form">
                         <h2 class="text-center fw-bold mb-4 creative-border">Application Form</h2>
-                        <form>
-                            <div class="row">
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="fullName" class="form-label">Full Name</label>
-                                    <input type="text" class="form-control" id="fullName" required>
-                                </div>
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="gender" class="form-label">Gender</label>
-                                    <select class="form-select" id="gender" required>
-                                        <option value="">Select</option>
-                                        <option value="Male">Male</option>
-                                        <option value="Female">Female</option>
-                                        <option value="Other">Other</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="contactNo" class="form-label">Contact No</label>
-                                    <input type="tel" class="form-control" id="contactNo" required>
-                                </div>
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" required>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="country" class="form-label">Your Country</label>
-                                    <input type="text" class="form-control" id="country" required>
-                                </div>
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="dob" class="form-label">Date of Birth</label>
-                                    <input type="date" class="form-control" id="dob" required>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="courseProgram" class="form-label">Course Program</label>
-                                    <select class="form-select" id="courseProgram" required>
-                                        <option value="">Choose Program</option>
-                                        <option value="3 Days Yoga Retreat">3 Days Yoga Retreat</option>
-                                        <option value="5 Days Yoga Retreat">5 Days Yoga Retreat</option>
-                                        <option value="7 Days Yoga Retreat">7 Days Yoga Retreat</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-6 col-lg-6 mb-3">
-                                    <label for="accommodation" class="form-label">Accommodation</label>
-                                    <select class="form-select" id="accommodation" required>
-                                        <option value="">Choose Accommodation</option>
-                                        <option value="Private Room">Private Room</option>
-                                        <option value="Shared Room">Shared Room</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-12 mb-3">
-                                    <label for="message" class="form-label">Message</label>
-                                    <textarea class="form-control" id="message" rows="4"></textarea>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn hover-fill btn-theme theme-design w-100 py-2 px-4">Submit</button>
-                        </form>
+                        <form id="registrationForm">
+							<div class="row">
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="fullName" class="form-label">Full Name</label>
+									<input type="text" class="form-control" id="fullName" name="fullName" required>
+								</div>
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="gender" class="form-label">Gender</label>
+									<select class="form-select" id="gender" name="gender" required>
+										<option value="">Select</option>
+										<option value="Male">Male</option>
+										<option value="Female">Female</option>
+										<option value="Other">Other</option>
+									</select>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="contactNo" class="form-label">Contact No</label>
+									<input type="tel" class="form-control" id="contactNo" name="contactNo" required>
+								</div>
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="email" class="form-label">Email</label>
+									<input type="email" class="form-control" id="email" name="email" required>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="country" class="form-label">Your Country</label>
+									<input type="text" class="form-control" id="country" name="country" required>
+								</div>
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="dob" class="form-label">Date of Birth</label>
+									<input type="date" class="form-control" id="dob" name="dob" required>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="courseProgram" class="form-label">Course Program</label>
+									<select class="form-select" id="courseProgram" name="courseProgram" required>
+										<option value="">Choose Program</option>
+										<option value="3 Days Yoga Retreat">3 Days Yoga Retreat</option>
+										<option value="5 Days Yoga Retreat">5 Days Yoga Retreat</option>
+										<option value="7 Days Yoga Retreat">7 Days Yoga Retreat</option>
+									</select>
+								</div>
+								<div class="col-md-6 col-lg-6 mb-3">
+									<label for="accommodation" class="form-label">Accommodation</label>
+									<select class="form-select" id="accommodation" name="accommodation" required>
+										<option value="">Choose Accommodation</option>
+										<option value="Private Room">Private Room</option>
+										<option value="Shared Room">Shared Room</option>
+									</select>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-lg-12 mb-3">
+									<label for="message" class="form-label">Message</label>
+									<textarea class="form-control" id="message" name="message" rows="4"></textarea>
+								</div>
+							</div>
+							<button type="submit" class="btn hover-fill btn-theme theme-design w-100 py-2 px-4">Submit</button>
+						</form>
+
+						<!-- Thank You Modal -->
+						<div class="modal fade" id="thankYouModal" tabindex="-1" aria-labelledby="thankYouModalLabel" aria-hidden="true">
+							<div class="modal-dialog modal-dialog-centered">
+								<div class="modal-content">
+									<div class="modal-body text-dark">
+										Thank you for reaching out to us. We appreciate your interest and will get back to you shortly.
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-theme" data-bs-dismiss="modal">Close</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						
                     </div>
                 </div>
             </div>
