--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -97,7 +97,7 @@
 
 		<!-- Retreat Page -->
         <div class="retreat-page container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" style="background-color: #FAF8F8;">
-            <div class="container p-5">
+            <div class="container">
                 <div class="row">
                    <!-- Left Side Navigation - col-lg-4 -->
                     <div class="col-lg-3 mb-3">
