--- a/himalaya-location.html
+++ b/himalaya-location.html
@@ -89,7 +89,7 @@
 
     <!-- Himalaya Page -->
     <div class="location-page container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" style="background-color: #FAF8F8;">
-        <div class="container p-5">
+        <div class="container">
             <div class="row">
                 <!-- Left Side Navigation - col-lg-3 -->
                 <div class="col-lg-3 mb-3">
